# Differential-Drive

./: CMakeLists.txt  README.md  package.xml
conf/: controller.yaml
cpp-qr-to-png-master/src/: main.cpp
launch/: final.launch  gmapping.launch  spawn_roomba.launch  world.launch
meshes/: caster_wheel.stl
models/floor/: model.config  model.sdf
models/floor/materials/scripts/: ground_floor.material
models/marker_1/: model.config  model.sdf
models/marker_1/materials/scripts/: marker1.material
models/marker_2/: model.config  model.sdf
models/marker_2/materials/scripts/: marker2.material
models/marker_3/: model.config  model.sdf
models/marker_3/materials/scripts/: marker3.material
models/wall_a/: model.config  model.sdf
models/wall_a/materials/scripts/: wall.material
models/wall_b/: model.config  model.sdf
models/wall_c/: model.config  model.sdf
models/wall_d/: model.config  model.sdf
models/wall_e/: model.config  model.sdf
models/wall_f/: model.config  model.sdf
msg/: bag_msg.msg  bag_msg1.msg  bag_msg2.msg  odom_msg.msg  planner_msg.msg
rviz/: my_robot.rviz
src/: ctrl_node.cpp  odom_node.cpp  opencv_node.cpp  planner_node.cpp
urdf/: materials.xacro  roomba.xacro  roomba_gazebo.xacro  roomba_macros.xacro  roomba_properties.xacro
worlds/: building.world  floor.world
